--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.vim]
+[*.{vim,lua}]
 indent_size = 2
 indent_style = space
-
-[*.lua]
-indent_size = 4
-indent_style = tabs
